--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style3.css" rel="stylesheet">
-    <title>Document</title>
+    <title>GENTOX55</title>
 </head>
 <body class="bg">
     <div class="img1">
