--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
-    <title>Document</title>
+    <title>GENTOX55</title>
+    <link rel="icon" href="C:\Users\anas boudraa\Pictures\IMG-2002.jpg" type="image/x-icon">
 </head>
 <body class="bg">
     <div class="border">
