--- a/reset.html
+++ b/reset.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style4.css">
     <title>GENTOX55</title>
+    <link rel="icon" href="C:\Users\anas boudraa\OneDrive\Bureau\Final\th5.jpg" type="image/x-icon">
 </head>
 <body class="bg">
     <div class="border">
