--- a/home.html
+++ b/home.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
-
     <link href="style2.css" rel="stylesheet">
     <title>GENTOX55</title>
+    <link rel="icon" href="C:\Users\anas boudraa\OneDrive\Bureau\Final\th5.jpg" type="image/x-icon">
 </head>
 <body class="bg">
 
