--- a/signin.html
+++ b/signin.html
@@ -26,12 +26,13 @@
             </div> <br />
             <button class="singin">
                 <p class=P1>Sign In</p>
-              </button>
+            </button>
               <hr class="line1">
               <hr class="line11">
               <p class="P33">Or</p>
               <p class="P44">With</p>
               <img class="img22" src="th1.png" alt="">
+        </form>
     </div>
 
      
