--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
       
             <div class="f1">
                 <label htmlFor="password"></label> <br />
-                <input type="password" name="password" placeholder="Password"  class="element" id="password">
+                <input type="password" name="password" placeholder="Password"  class="element" id="password" minlength="9">
             </div> <br />
             <div class="f1">
                 <label htmlFor="password"></label> <br />
